--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutCustomer.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutCustomer.cshtml
@@ -245,7 +245,7 @@
 														</li>
 														
 														<li>
-															<a href="#">pages</a>
+															<a asp-action="khuyenmai" asp-controller="Voucher" asp-area="Customer">Khuyến Mãi</a>
 															<div class="mega_menu">
 																<div class="mega_top fix">
 																	<div class="mega_items">
