--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/Voucher/khuyenmai.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/Voucher/khuyenmai.cshtml
@@ -2,8 +2,10 @@
 @{
     Layout = "~/Areas/Customer/Views/Shared/_LayoutVoucherCustomer.cshtml";
     List<Voucher> lstvc = ViewBag.lstVoucher as List<Voucher>;
+    List<User_Voucher> lstUVC = ViewBag.lstUVC as List<User_Voucher>;
 }
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 <style>
     .body {
@@ -76,6 +78,14 @@
         .select-voucher-btn:hover {
             background-color: #c0392b;
         }
+        /* CSS cho button không thể lấy */
+        .select-voucher-btn.disabled {
+            background-color: #ccc; /* Màu nền xám */
+            color: #777; /* Màu chữ nhạt hơn */
+            cursor: not-allowed; /* Thay đổi con trỏ chuột */
+            border: 1px solid #aaa; /* Viền màu xám */
+        }
+
 </style>
 <center><h1 style="color:red">Hãy Lấy Voucher về ngay nào !!!</h1></center>
 @if (lstvc == null)
@@ -89,16 +99,26 @@
         <div class="voucher-list">
             @foreach (var item in lstvc)
             {
-                <div class="voucher-card">
-                    <div class="voucher-info">
-                        <h2>@item.Ten</h2>
-                        <p>Dành cho đơn hàng từ @item.GiaGiamToiThieu VND</p>
-                    </div>
-                    <a class="select-voucher-btn" asp-action="layvouchervekho" asp-controller="Voucher" asp-area="Customer" asp-route-mavc="@item.MaVoucher">Lấy về</a>
-                </div>
+               
+                    <div class="voucher-card">
+                        <div class="voucher-info">
+                            <h2>@item.Ten</h2>
+                        <p>Dành cho đơn hàng từ <p name="tien">@item.GiaGiamToiThieu</p></p>
+                        </div>
+                        @if(lstUVC.FirstOrDefault(x => x.MaVoucher == item.MaVoucher) != null)
+                        {
+                        <button class="select-voucher-btn disabled" disabled>Đã lấy</button>
+                        }
+                        else
+                        {
+                            <a class="select-voucher-btn" asp-action="layvouchervekho" asp-controller="Voucher" asp-area="Customer" asp-route-mavc="@item.MaVoucher">Lấy về</a>
+
+                        }
+                </div>  
             }
         </div>
     </div>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="~/js/formatMoneyKM.js">
+    
+</script>
