Update Filer Product

--- a/HN120_ShopQuanAo.View/Views/Shared/_Layout.cshtml
+++ b/HN120_ShopQuanAo.View/Views/Shared/_Layout.cshtml
@@ -146,7 +146,7 @@
                                                                 </div>
                                                             </div>
                                                         </li>
-                                                        <li><a href="#">men</a>
+                                                        <li><a asp-controller="Product" asp-action="Filter">men</a>
                                                             <div class="mega_menu">
                                                                 <div class="mega_top fix">
                                                                     <div class="mega_items">
