--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/QuanLyHoaDon.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/QuanLyHoaDon.cshtml
@@ -114,8 +114,8 @@
                     }
                  @*   @item.UserID *@
                 </td>
-                <td>     
-                  @*  @foreach (var vc in lstVC)
+                    <td class="money">
+                            @*  @foreach (var vc in lstVC)
                    {
                        if (vc.MaVoucher == item.MaVoucher)
                        {
