--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/GianHangNguoiDung.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/GianHangNguoiDung.cshtml
@@ -22,9 +22,9 @@ else{
             <button type="submit"><i class="fa fa-search"></i></button>
         </form>
     </div>
-	foreach(var item in Model)
-	{
          <div class="row">
+	@foreach(var item in Model)
+	{
         <a asp-action="DetailSanPham" asp-controller="CustomerHome" asp-area="Customer" asp-route-masp="@item.MaSp">
             <div class="col-lg-4 col-md-6">
                 <div class="single_product">
@@ -49,8 +49,8 @@ else{
                 </div>
             </div>
 		</a>
-        </div>
 	}
+   </div>
 }   
 <style>
     a {
