--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutShopCustomer.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutShopCustomer.cshtml
@@ -71,7 +71,7 @@
                                         <li><a href="contact.html" title="Contact">Contact</a></li>
                                         <li><a asp-action="HoaDonCuaToi" asp-controller="HoaDonCustomer" asp-area="Customer">Hóa đơn của tôi</a></li>
                                         <li><a href="my-account.html" title="My account">My account</a></li>
-                                        <li><a href="cart.html" title="My cart">My cart</a></li>
+                                        <li><a href="https://localhost:7060/Customer/CustomerHome/GioHangCuaBan" title="My cart">My cart</a></li>
                                         <li class="nav-item dropdown">
                                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="border: none;">
                                                 <img style="max-width: 20px; max-height: 20px;" src="https://tse1.mm.bing.net/th?id=OIP.f3DM2upCo-p_NPRwBAwbKQHaHa&pid=Api&rs=1&c=1&qlt=95&w=120&h=120" alt="">
