--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutCheckoutCustomer.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutCheckoutCustomer.cshtml
@@ -183,7 +183,7 @@
                                         <nav>
                                             <ul>
                                                 <li class="active">
-                                                    <a href="index.html">Home</a>
+                                                    <a href="https://localhost:7060/Customer">Home</a>
                                                     <div class="mega_menu jewelry">
                                                         <div class="mega_items jewelry">
                                                             <ul>
