Update filter Product 3

--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/UserManager/GetAllEmpolyee.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/UserManager/GetAllEmpolyee.cshtml
@@ -42,7 +42,7 @@
 
 <!-- Form hoặc nút lọc -->
 <div class="filter-form">
-    <a class="add-account-btn btn btn-primary" asp-controller="UserManager" asp-action="CreateAnAccount">+ Thêm mới tài khoản</a>
+    <a class="add-account-btn btn btn-primary" asp-controller="UserManager" asp-action="CreateEmployeeAccount">+ Thêm mới tài khoản</a>
 </div>
 
 <table id="tble_ajax" class="table" enctype="multipart/form-data">
