--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - HN120_ShopQuanAo.View</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="shortcut icon" type="image/png" href="~/src/assets/images/logos/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="~/src/assets/images/logos/image.png" />
     <link rel="stylesheet" href="~/src/assets/css/styles.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -61,7 +61,7 @@
             <div>
                 <div class="brand-logo d-flex align-items-center justify-content-between">
                     <a asp-area="Admin" asp-controller="AdminHome" asp-action="Index" class="text-nowrap logo-img">
-                        <img src="~/src/assets/images/logos/dark-logo.svg" width="180" alt="" />
+                        <img src="~/src/assets/images/logos/image.png" width="180" alt="" />
                     </a>
                     <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
                         <i class="ti ti-x fs-8"></i>
